[package]
name = "Server_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
sysinfo = "0.29.10"
crossbeam-channel = "0.5.1"
steganography = "1.0.2"
base64 = "0.21.5"
image = "0.21.3"
chrono = "0.4.19"
